# ab-stats

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ab_stats/: __init__.py  stats.py
